Switch to custom configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=saml-sp
+# SP configuration
+saml.sp.auth-endpoints=/profile/**
+saml.sp.registrationid=test-sp
+saml.sp.entityid={baseUrl}/{registrationId}
+saml.sp.nameid-format=urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified
+saml.sp.signing.privatekey-location=classpath:certificates/sp.key
+saml.sp.signing.certificate-location=classpath:certificates/sp.crt
+saml.sp.encryption.privatekey-location=classpath:certificates/sp.key
+saml.sp.encryption.certificate-location=classpath:certificates/sp.crt
+#saml.sp.encryption.privatekey-location=file:/tmp/sp.key
+#saml.sp.encryption.certificate-location=file:/tmp/sp.crt
+saml.sp.sign-authn-request=false
+saml.sp.acs.location={baseUrl}/sso/{registrationId}
+saml.sp.acs.binding=POST
+
+# IDP configuration for SP
+saml.idp.metadata-location=https://idp/sso/saml/metadata
+#saml.idp.entityid=idp:test
+#saml.idp.singlesignon.url=https://idp/sso/saml
+#saml.idp.singlesignon.binding=POST
+#saml.idp.singlesignon.want-request-signed=false
+#saml.idp.verification.certificate-location=file:/tmp/idp.pem
+
+# Application configuration
+
+# login URL should match (!) ACS location
+sso.login-processing-url=/sso/test-sp
